--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.5",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "i18next": "^23.14.0",
     "lodash": "^4.17.21",
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^2.2.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "swiper": "^11.1.11",
