--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-snowfall": "^2.2.0",
     "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "react-type-animation": "^3.2.0",
     "react-typical": "^0.1.3",
     "sass": "^1.77.8",
