--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_PATH=src
 GENERATE_SOURCEMAP=false
-REACT_APP_API_ROOT='https://backend.mgareklama.uz/api'
+REACT_APP_API_ROOT='https://api.mgareklama.com/api/v1'
 SKIP_PREFLIGHT_CHECK=true
